--- a/template.tex
+++ b/template.tex
@@ -30,7 +30,7 @@
 %\fi
 
 %%-----------------------------------------------------
-\usepackage{color}				% Farbverwaltung
+\usepackage{color}				     % Farbverwaltung
 %\usepackage{ngerman} 			% Neue deutsche Rechtsschreibung
 \usepackage[english, ngerman]{babel}
 \usepackage[latin1]{inputenc} 	% Ermöglicht Umlaute-Darstellung
@@ -73,25 +73,19 @@
 %------------------------- Titelblatt -------------------------------------
 \title{Titel der Arbeit auf Deutsch}
 \subtitle{English Title}
-%---- Die Art der Dokumentation kann hier ausgewählt werden---------------
-%\project{Bachelor-Projektarbeit}
-
-%\project{Master-Projektstudium}
-%\project{Master-Abschlussarbeit}
-%\project{Seminar zur Vorlesung ...}
-%\project{Hausarbeit zur Vorlesung ...}
+\author{Simon Christian Kr\"{u}ger}  % Autor der Arbeit
 %--------------------------------------------------------------------------
-\author{Autor} 											% Autor der Arbeit
+
+\major{Bachelor of Science (B.Sc)}  % Studiengang inkl. Abkürzung
+\subject{Wirtschaftsinformatik} % Studienfach
+\faculty{Wirtschaft und Gesundheit} % Fachbereich
+
+\period{Sommersemester 2016}
 \firstexaminer{Titel Vorname Name} 		  % Erstprüfer/in
 \secondexaminer{Titel Vorname Name}   % Zweitprüfer/in
-\period{Sommersemester 2016}
-\address{Ort,} 									   % Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
-\submitdate{Abgabedatum} 				% Abgabedatum
-%\begingroup
-%  \renewcommand{\thepage}{title}
-%  \mytitlepage
-%  \newpage
-%\endgroup
+\address{G\"{u}tersloh,} 			 % Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
+\submitdate{01.01.1970} 				% Abgabedatum
+
 \begingroup
   \renewcommand{\thepage}{Titel}
   \mytitlepage
