--- a/template.tex
+++ b/template.tex
@@ -62,6 +62,7 @@
 \usepackage[a4paper]{geometry} % Andere Formatierung
 \usepackage{bibgerm}
 \usepackage{array}
+\usepackage[scaled=0.9]{helvet}
 \hyphenation{Ele-men-tar-ob-jek-te  ab-ge-tas-tet Aus-wer-tung House-holder-Matrix Le-ast-Squa-res-Al-go-ri-th-men} 		% Weitere Silbentrennung bei Bedarf angeben
 \setlength{\textheight}{1.1\textheight}
 \pagestyle{myheadings} 			% Erzeugt selbstdefinierte Kopfzeile
@@ -71,8 +72,8 @@
 %--------------------------------------------------------------------------
 \begin{document}
 %------------------------- Titelblatt -------------------------------------
-\title{Titel der Arbeit auf Deutsch}
-\subtitle{English Title}
+\title{Lorem ipsum dolor sit amet}
+\subtitle{consetetur sadipscing elitr sed diam}
 \author{Simon Christian Kr\"{u}ger}  % Autor der Arbeit
 %--------------------------------------------------------------------------
 
@@ -83,7 +84,7 @@
 \period{Sommersemester 2016}
 \firstexaminer{Titel Vorname Name} 		  % Erstprüfer/in
 \secondexaminer{Titel Vorname Name}   % Zweitprüfer/in
-\address{G\"{u}tersloh,} 			 % Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
+\address{G\"{u}tersloh} 			 % Datum
 \submitdate{01.01.1970} 				% Abgabedatum
 
 \begingroup
